# Data-Analyst-Agentic-AI

./: .eslintrc.json  .gitignore  API.md  API_CONTRACT.md  ARCHITECTURE.md  BACKEND_INTEGRATION_GUIDE.md  CHECKLIST.md  COLOR_THEME.md  DELIVERY_MANIFEST.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  FEATURES.md  FILE_STRUCTURE.md  GETTING_STARTED.md  INDEX.md  INTEGRATION_GUIDE.md  PROFESSIONAL_DESIGN.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  THEME_COMPLETION_REPORT.md  THEME_UPDATE_SUMMARY.md  VISUAL_STYLE_GUIDE.md  docker-compose.full.yml  docker-compose.yml  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml  postman-collection.json
__tests__/components/: FileUpload.test.tsx
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/projects/: page.tsx
autonomous_data_analyst/: Dockerfile  README.md  docker-compose.yml  main.py  pytest.ini  requirements.txt
autonomous_data_analyst/app/: __init__.py
autonomous_data_analyst/config/: settings.py
autonomous_data_analyst/scripts/: create_demo_data.py  init_db.sql
autonomous_data_analyst/tests/: test_api.py  test_integration.py
backend/: pyproject.toml  requirements.txt
components/: BackendSwitcher.tsx
components/agent/: StepTraceVisualizer.tsx
components/audit/: AuditLog.tsx
components/cleaning/: CleaningEditor.tsx
components/dataset/: FileUpload.tsx  PreviewTable.tsx
components/profiling/: ColumnCard.tsx  ProfileDashboard.tsx
hooks/: useBackendSwitch.ts
lib/: api.adapter.ts  api.real.ts  api.ts  mock-data.ts  types.ts
mock-backend/: server.js
(+34 files in other folders)
